--- a/web-app/src/components/contract/contract.component.css
+++ b/web-app/src/components/contract/contract.component.css
@@ -1,5 +1,5 @@
 .contract-item {
-    background-color: #dadde3;
+    background-color: #6897de;
     display: inline-block;
     vertical-align: top;
     width: 46.5%;
